align icons and add box shadow to input

--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ html {
 
 .header .header-icon {
     align-self: center;
-    justify-self: center;
+    justify-self: start;
 }
 
 .header .header-search {
@@ -70,6 +70,7 @@ html {
     width: 80%;
     border: 1px solid rgb(182, 181, 181);
     border-radius: 6px;
+    box-shadow: 0px 1px 3px 0px #a6a6a6;
 }
 
 .header .header-search input::placeholder {
