--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ html {
 }
 
 .header {
-    background: #ffffff;
+    background: #033181;
     grid-area: header;
 }
 
@@ -113,7 +113,7 @@ html {
 
 .header .header-profile .profile-name {
     font-size: 1.2rem;
-    color: #848485;
+    color: #f1f5f8;
     font-weight: 600;
     letter-spacing: .8px;
     padding-right: 12px;
